
  - Implements experimental Files API serving files directly through NGINX.

  - Memcache API supports new Compare-And-Set function.

  - Builtin handlers are configurable via app.yaml now.

  - Improved support for Capabilities API.

  - Supports new RDBMS API.

  - Completely switches to Celery as Task Queue backend.

  - Adds default task queue if no queue.yaml is provided.

  - Fixes an issue where multitenancy using namespaces wasn't suppoted by
    the Datastore MongoDB API Proxy Stub.

    - http://code.google.com/p/typhoonae/issues/detail?id=87

  - Fixes an issue where importing the MySQL Datastore API Proxy Stub failed.

    - http://code.google.com/p/typhoonae/issues/detail?id=81


Version 0.2.0 (2010-12-12)
--------------------------

  - Supports Google App Engine SDK 1.4.0.

  - Implements Channel API backed by the NGINX push module.

    - http://code.google.com/p/typhoonae/issues/detail?id=57

  - Adds experimental support for the appcfg.py update command.

    - http://code.google.com/p/typhoonae/issues/detail?id=49

  - Incoming Mail Service through a configurable IMAP listener and HTTP
    dispatcher.

    - http://code.google.com/p/typhoonae/issues/detail?id=73

  - Adds process monitor for automatically restarting appserver processes
    consuming more than a given amount of memory that is held in RAM (RSS).

  - Using Celery as alternative Task Queue backend.

  - Appserver imports and initializes API proxy stubs for various service
    backends only when needed.

  - Updated Web Socket Service to provide the latest Web Socket protocol.

    - http://code.google.com/p/typhoonae/issues/detail?id=52

  - Removed obsolete service for sequential integer ids and so eliminated a
    typical 'Single Point Of Failure'.

  - Fixes an issue where spaces in application paths caused failures on
    startup.

    - http://code.google.com/p/typhoonae/issues/detail?id=62

  - Fixes issues where develop mode didn't work.
